test/library/standard/Reflection/getFieldRef-type.2.good
getFieldRef-type.chpl:17: error: cannot return a reference to 'type' field 'x'
